scrollbar fix.
push element was actually un-uneeded, but only had a negative effect on
desktop sizes.

--- a/css/mobile-scaling.css
+++ b/css/mobile-scaling.css
@@ -202,5 +202,11 @@
       display: none !important;
       visibility: hidden !important;
   }
-  .push{margin-bottom: 48px}
+  .push{margin-bottom: 0px}
+}
+@media screen and (max-width: 1000px){
+  .header-section{
+      display: none !important;
+      visibility: hidden !important;
+  }
 }
