--- a/style.css
+++ b/style.css
@@ -496,7 +496,7 @@ form { width: 100%; overflow: hidden; }
 
 /* HEADER */
 
-.push{margin-bottom: 48px}
+.push{margin-bottom: 0px}
 
 #header
 {
